<resources>
    <string name="app_name">ElRetoV1</string>
    <string name="v1TxtUser">User</string>
    <string name="v1TxtPassword">Password</string>
    <string name="v1BtnLog">Log Acount</string>
    <string name="v1BtnCreate">Create Acount</string>
    <string name="vInfoTitulo">Informacion</string>
    <string name="vInfoTexto">informacion general y de contacto sobre la aplicacion \n
    asdasgasasgadgasdgasdghasdg asdg asg asgasdas
    dgas dtgasdfgas gaerg
    erg awr tgawgagawg awg</string>
    <string name="vCardTxtP">Puntos</string>
    <string name="vCardTxtPEsp">Puntos Esp.</string>
    <string name="vCardVic">Victorias</string>
    <string name="vCardTxtDer">Derrotas</string>
    <string name="navTextUser">Usuario</string>
    <string name="navTextTerritorios">Territorios</string>
    <string name="navTextAjustes">Ajustes</string>
    <string name="vCreacioUsCorreo">Correo electronio</string>
    <string name="vCreacioUsNombre">Nombre</string>
    <string name="vCreacioUsPassword">Contraseña</string>
    <string name="vCreacioUsPassword2">Verifique contraseña</string>
    <string name="vCreacioUsBtn">crear</string>
    <string name="vPrincipalComenzar">Empezar</string>
    <string name="vPrincipalManual">Manual</string>
    <string name="vPrincipalAjustes">Ajustes</string>
    <string name="vCreacioUsBtnLogConCuenta">Log con cuenta</string>

    <string name="vManual1">Introduccion al juego</string>
    <string name="vManual2">
        Como base, todos los jugadores comienzan con 30 puntos,
        cada accion requiere puntos, tanto realizar, desafios, retar y crear territorios.
    </string>
    <string name="vManual3">Costes en puntos (P)</string>
    <string name="vManual4">
        - 1 punto desafiar a un jugador \n
        - 2 puntos desafiar un territorio  \n
        - 10 puntos crear un territorio con un reto  \n
        \t    - 5 puntos ampliar el territorio \n
        \t    - 5 puntos más por cada espacio para añadir un reto \n
        - 5 puntos crear un reto individual, se consume por cada uso
    </string>
    <string name="vManual5">Pecompensas en puntos:</string>
    <string name="vManual6">
        - puntos por desafiar: \n
        \t - 1 punto por un reto fácil \n
        \t - 2 puntos por un reto normal \n
        \t - 4 puntos por un reto difícil \n
        - puntos por territorio, por cada vez que alguien NO consigue resolver tu reto: \n
        \t - 3 puntos en fácil \n
        \t - 5 puntos en normal \n
        \t - 7 puntos en difícil
    </string>
    <string name="vManual7">Pérdida de puntos:</string>
    <string name="vManual8">
        - puntos por desafío perdido: \n
        \t -1 punto por un reto fácil \n
        \t -2 puntos por un reto normal \n
        \t -4 puntos por un reto difícil \n
        - puntos por territorio,  por cada vez que alguien SI consigue resolver tu reto: \n
        \t -2 puntos en fácil \n
        \t -4 puntos en normal \n
        \t -5 puntos en difícil
    </string>

</resources>