<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/manualico" />

    <TextView
        android:id="@+id/vManualTxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual1"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/vManualTxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual2"
        android:textSize="14dp"
        />
    <TextView
        android:id="@+id/vManualTxt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual3"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/vManualTxt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual4"
        android:textSize="14dp"
        />
    <TextView
        android:id="@+id/vManualTxt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual5"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/vManualTxt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual6"
        android:textSize="14dp"
        />
    <TextView
        android:id="@+id/vManualTxt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual7"
        android:textSize="20dp"
        />
    <TextView
        android:id="@+id/vManualTxt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vManual8"
        android:textSize="14dp"
        />
</LinearLayout>