<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreacionUsuario"
    android:orientation="vertical"
    android:layout_margin="40dp"
    android:gravity="center_horizontal"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/iconuser"
        android:layout_marginTop="30dp"

        />

    <EditText
        android:id="@+id/vCreacioUsTxtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/vCreacioUsCorreo"
        android:textSize="20dp"
        android:text=""
        />

    <EditText
        android:id="@+id/vCreacioUsTxtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vCreacioUsNombre"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text=""
        />

    <EditText
        android:id="@+id/vCreacioUsTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vCreacioUsPassword"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:text=""
        />

    <EditText
        android:id="@+id/vCreacioUsTxtPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vCreacioUsPassword2"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:text=""
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vCreacioUsBtn"
        android:layout_marginTop="20dp"
        />

</LinearLayout>