<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="50dp"
    android:gravity="center_horizontal"
    >


    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:srcCompat="@drawable/ic_user"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <TextView
        android:id="@+id/textUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/v1TxtUser"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <TextView
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"

        android:hint="@string/v1TxtPassword"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/v1BtnLog" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/v1BtnCreate" />

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/icoinfo"
        android:layout_gravity="right"
        />


</LinearLayout>