<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardActivity"
    android:layout_margin="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/vCardImgUser"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/iconuser"
                android:layout_marginRight="20dp"
                />

            <LinearLayout
                android:id="@+id/vCardLayoutDatas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/vCardImgUser"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/vCardNumPuntos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="1"
                        android:gravity="center_horizontal"
                        />

                    <TextView
                        android:id="@+id/vCardTxtPuntos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vCardTxtP"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/vCardNumPuntosEsp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="1"
                        android:gravity="center_horizontal"

                        />

                    <TextView
                        android:id="@+id/vCardTxtPuntosEsp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vCardTxtPEsp"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/vCardNumVictorias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="1"
                        android:gravity="center_horizontal"
                        />

                    <TextView
                        android:id="@+id/vCardTxtVictorias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vCardVic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/vCardNumDerrotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="1"
                        android:gravity="center_horizontal"
                        />

                    <TextView
                        android:id="@+id/vCardTxtDerrotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vCardTxtDer"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>